# lab-5-7-rva-team

src/: CMakeLists.txt
src/index_core/include/index/: Document.hpp  DocumentBuilder.hpp  IndexStore.hpp  InvertedIndex.hpp  Result.hpp  UpdateTransaction.hpp
src/index_core/src/: Document.cpp  DocumentBuilder.cpp  IndexStore.cpp  InvertedIndex.cpp  Result.cpp  UpdateTransaction.cpp
tests/: CMakeLists.txt  tests.cpp
